# trs_2

./: CMakeLists.txt  Untitled.ipynb  report1.docx  ~$бораторная работа ТРС 2 (Автосохраненный).docx  ~$бораторная работа ТРС 2.docx  Лабораторная работа ТРС 2 (Автосохраненный).docx  Лабораторная работа ТРС 2.docx  ТРС_лр_2.pptx  первое_задание.mw  первое_задание_MAS.bak
trs_2/: CMakeLists.txt  murat.cpp  task_1.cpp  task_2.cpp  task_2_1.cpp  task_2_2.cpp  task_3.cpp  task_4.cpp  trs_2.h
